# phresh

./: .gitignore  Dockerfile  docker-compose.yaml  main.py  pyproject.toml
backend/app/api/: server.py
backend/app/api/dependencies/: database.py
backend/app/api/routes/: __init__.py  cleanings.py  users.py
backend/app/core/: config.py  tasks.py
backend/app/db/: tasks.py
backend/app/db/migrations/: env.py  script.py.mako
backend/app/db/migrations/versions/: 571ca0679147_create_main_tables.py
backend/app/db/repositories/: base.py  cleanings.py  users.py
backend/app/models/: cleanings.py  core.py  users.py
backend/app/services/: __init__.py  authentication.py
tests/: conftest.py  test_cleanings.py  test_users.py
