[project]
name = "phresh"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.0"
dependencies = [
    "alembic>=1.4.5,<2.0",
    "databases[postgresql]>=0.4.0",
    "email-validator>=2.1",
    "fastapi>=0.110,<0.128",
    "httpx>=0.28.1",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.0.0",
    "sqlalchemy>=2,<3",
    "uvicorn>=0.27",
]

[dependency-groups]
dev = [
    "asgi-lifespan>=2.1.0",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.2",
]
