[project]
name = "phresh"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.0"
dependencies = [
    "alembic>=1.4.5,<2.0",
    "databases[postgresql]>=0.4.0",
    "email-validator>=2.1",
    "fastapi>=0.110,<0.128",
    "httpx>=0.28.1",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.0.0",
    "pyjwt>=2.11.0",
    "sqlalchemy>=2,<3",
    "uvicorn>=0.27",
]

[dependency-groups]
dev = [
    "asgi-lifespan>=2.1.0",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-cov",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.2",
    "mypy"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=backend --cov-report=term-missing"
asyncio_mode = "auto"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"


[tool.coverage.run]
show_missing=true
source = ["backend"] 
omit = [
    "*/migrations/*",
    "migrations/*",
    "alembic/*",
    "app/db/migrations/*"
]
